# PyMemSim-MCP

./: .gitignore  README.md  pyproject.toml
examples/: case-1.md  case-1.py  case-2.md  case-2.py  case-3.md  case-3.py  mcp-exp-1.py  mcp-exp-2.py  reference.py
examples/validation data/: case-1-1.csv  case-1-2.csv  case-3-1.csv  case-3-2.csv
examples/validation result/: case-1-result.json  case-2-result.json  case-2.csv  case-3-result.json  flowrates.json
private/: gas-hfm.py
pymemsim_mcp/: app.py  server.py
pymemsim_mcp/configs/: info.py
pymemsim_mcp/interface/: __init__.py  gas_hfm.py  gas_hfm_builder.py  gas_hfm_helpers.py  gas_hfm_models.py  gas_hfm_response.py  gas_hfm_validation.py  references.py  resources.py
pymemsim_mcp/models/: __init__.py  refs.py
pymemsim_mcp/tools/: check_reference.py  flow_rate_analyzer.py
pymemsim_mcp/utils/: model_source_builder.py
